# alexan.dev

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md  deploy.sh  index.html
assets/styling/: gruvbox-dark.css  gruvbox-light.css  index.css
src/: main.rs
src/components/: about_section.rs  career_section.rs  certifications_section.rs  contact_section.rs  data.rs  education_section.rs  experience_section.rs  footer_section.rs  go_to_top.rs  header_section.rs  languages_section.rs  mod.rs  nav_section.rs  projects_section.rs  scroll_to_top.rs  skills_section.rs
